Train LGBM models for all proteins

--- a/open_problems_example.ipynb
+++ b/open_problems_example.ipynb
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "aaec8d1e",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
    "source": [
     "adata_rna = train_lightgbm_models(\n",
     "    adata_rna,\n",
-    "    adata_prot[:, :3],\n",
+    "    adata_prot,\n",
     "    train_cell_ids=train_cell_ids,\n",
     "    test_cell_ids=test_cell_ids,\n",
     "    folds=folds,\n",
